# adaptive-qec-decoder

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_python.py
analysis/: generate_publication_figures.py  generate_publication_tables.py  make_all_figures.py  publication_plots.py  publication_tables.py
configs/: _temporary_publication.yaml  config_manager.py  default.yaml  experiment_config.py  publication.yaml  tmp.yaml
evaluation/: adaptive_decoder.py  evaluator.py  logical_error.py
experiments/: experiment_runner.py
notes/: research_journal.md
nvidia_qec_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
plotting/: plot_adaptive_routing.py  plot_confidence_histogram.py  plot_distance_accuracy.py  plot_noise_accuracy.py  plot_throughput.py
scripts/: activate.sh  adaptive_routing.py  benchmark_throughput.py  build_dataset.py  build_noise_dataset.py  build_training_dataset.py  evaluate_model.py  figure11_framework.py  figure12_pipeline.py  figure15_pareto.py  figure18_decoder_flow.py  generate_final_tables.py  generate_tables.py  inspect_dataset.py  run_baseline_experiment.py  run_distance_sweep.py  run_experiment.py  run_noise_evaluation.py  summarize_distance_results.py  summarize_noise_results.py  table6.py  table8.py  table9.py  test_circuit_generator.py  test_config_manager.py  test_dataset_builder.py  test_dataset_loader.py  test_decoder.py  test_experiment_config.py  test_experiment_runner.py  test_logical_error.py  test_neural_decoder.py  test_parameter_grid.py  test_qec_stack.py  test_result_saver.py  (+5 more)
(+91 files in other folders)
